--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Skote Vite React Admin & Dashboard Template</title>
+    <title>Turistikrota Yönetim Sistemi</title>
     <script>
       var global = global || window;
-      </script>
+    </script>
   </head>
   <body>
     <div id="root"></div>
